<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_vid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.autoacc_reportfinal.VidActivity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_gps"
        android:layout_below="@+id/table_vids"
        android:layout_alignParentStart="true">
    </LinearLayout>
    <TextView
        android:text="@string/gps_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/event_location"
        android:layout_below="@+id/table_vids"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/layout_dimension"
        android:textSize="@dimen/header_size"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/layout_details"
        android:layout_below="@+id/layout_gpsimage"
        android:layout_marginTop="@dimen/layout_dimension"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtAddInfo"
            android:text="@string/add_info"
            android:textSize="@dimen/header_size"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:id="@+id/et_AddInfo"
            android:hint="@string/hints_details"
            android:textSize="@dimen/hints_sp"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_vid"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/layout_dimension">
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_videos"
            android:layout_weight="1"
            android:textSize="@dimen/header_size"
            android:id="@+id/txtEventVideos" />
    </LinearLayout>
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/table_vids"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/layout_vid"
        android:layout_centerHorizontal="true">
        <Button
            android:text="@string/vid1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnv2" />
        <Button
            android:text="@string/vid2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnv3" />
        <Button
            android:text="@string/vid3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnv1" />
    </TableRow>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/layout_gpsimage"
        android:layout_below="@id/event_location"
        android:layout_alignParentStart="true">
        <ImageView
            android:id="@+id/img_gps"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
</RelativeLayout>